salesforce.com-societies-oss/src/objects/SocietyComment__c.object
<CustomObject>
    <description>Societies Discussion Board</description>
    <fields>
        <fullName>Depth__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disliked__c</fullName>
        <label>Disliked</label>
        <summaryFilterItems>
            <field>SocietyVote__c.Type__c</field>
            <operation>equals</operation>
            <value>Disliked</value>
        </summaryFilterItems>
        <summaryForeignKey>SocietyVote__c.SocietyComment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FormattedText__c</fullName>
        <label>Formatted Text</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsInlineEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Inline Edit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liked__c</fullName>
        <label>Liked</label>
        <summaryFilterItems>
            <field>SocietyVote__c.Type__c</field>
            <operation>equals</operation>
            <value>Liked</value>
        </summaryFilterItems>
        <summaryForeignKey>SocietyVote__c.SocietyComment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ParentDepth__c</fullName>
        <formula>IF(NOT(ISBLANK(Parent__c)), Parent__r.Depth__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentHierarchy__c</fullName>
        <description>This picklist becomes automatically built-out with parent IDs.</description>
        <label>Parent Hierarchy</label>
        <picklist>
            <picklistValues>
                <fullName>Root</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <referenceTo>SocietyComment__c</referenceTo>
        <relationshipLabel>Society Comments</relationshipLabel>
        <relationshipName>SocietyComments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reported__c</fullName>
        <label>Reported</label>
        <summaryFilterItems>
            <field>SocietyVote__c.Type__c</field>
            <operation>equals</operation>
            <value>Reported</value>
        </summaryFilterItems>
        <summaryForeignKey>SocietyVote__c.SocietyComment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Saved__c</fullName>
        <label>Saved</label>
        <summaryFilterItems>
            <field>SocietyVote__c.Type__c</field>
            <operation>equals</operation>
            <value>Saved</value>
        </summaryFilterItems>
        <summaryForeignKey>SocietyVote__c.SocietyComment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Society__c</fullName>
        <label>Society</label>
        <referenceTo>Society__c</referenceTo>
        <relationshipName>Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Society Comment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Society Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SocietyComment_TypeIsNotUpdated</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(Type__c))</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>The type field is only allowed to be set when first creating a comment.</errorMessage>
    </validationRules>
</CustomObject>